# Notas_PA

./: CMakeLists.txt  Map.jhm  README.md  apuntadores-y-memoria-dinamica.html  archivos-de-texto.html  cadena-caracteres.html  ejemplo-apuntadores-ii.html  ejemplo-texto.html  ejercicio-clasificacion.html  starter.html
Busqueda_Productos/: Producto.h  con_restricciones.cpp  con_restricciones.h  crear_binario.cpp  crear_binario.h  enunciado_busqueda.md  main.cpp  sin_restricciones.cpp  sin_restricciones.h
Ejemplos/: apuntadoresCom.cpp  arreglos.cpp  binario.cpp  palindromo.cpp  registros.cpp  regresion.cpp  texto.cpp
Funcion_Encriptacion/: encriptacion_con_restricciones.cpp  encriptacion_con_restricciones.h  encriptacion_sin_restricciones.cpp  encriptacion_sin_restricciones.h  enunciado_encriptacion.md  main.cpp
Lectura_estructuras/: crear_binario.cpp  enunciado_lectura.md  lectura_archivos.h  main.cpp  procesar_archivo.cpp
Mensajes/: contactos_con_restricciones.cpp  contactos_con_restricciones.h  contactos_sin_restricciones.cpp  contactos_sin_restricciones.h  enunciado_mensajes.md  main.cpp
NotasClase_PA/Writerside/: in.tree
NotasClase_PA/Writerside/topics/: Apuntadores-Complejos.md  Apuntadores-y-Memoria-Dinamica.md  Archivos-Binarios.md  Archivos-de-Texto.md  Arreglos-Dinamicos.md  Cadena-Caracteres.md  Ejemplo-Apuntadores-II.md  Ejemplo-Binario.md  Ejemplo-Cadenas.md  Ejemplo-Registros.md  Ejemplo-Texto.md  Ejercicio-Clasificacion.md  Ejercicio-Memoria.md  Estructuras.md  starter.md
NotasCpp/: HelpTOC.json  apuntadores-complejos.html  archivos-binarios.html  arreglos-dinamicos.html  ejemplo-binario.html  ejemplo-cadenas.html  ejemplo-registros.html  ejercicio-memoria.html  estructuras.html
Palindromos/: con_restricciones.cpp  con_restricciones.h  enunciado_palindromos.md  main.cpp  sin_restricciones.cpp  sin_restricciones.h
Parcial1/: parcial1.md  solucion.cpp  solucion2.cpp
Tension_arterial/: crear_archivo.cpp  crear_archivos.h  enunciado_tension.md  main.cpp  tension_arterial_common.h  tension_arterial_con_restricciones.cpp  tension_arterial_con_restricciones.h  tension_arterial_sin_restricciones.cpp  tension_arterial_sin_restricciones.h
