cmake_minimum_required(VERSION 3.29)
project(PUJ_Parciales)

set(CMAKE_CXX_STANDARD 20)

add_executable(PUJ_Parciales
#        Palindromos/con_restricciones.h
#        Palindromos/con_restricciones.cpp
#        Palindromos/sin_restricciones.h
#        Palindromos/sin_restricciones.cpp
#        Palindromos/main.cpp
#        Busqueda_Productos/con_restricciones.h
#        Busqueda_Productos/con_restricciones.cpp
#        Busqueda_Productos/sin_restricciones.h
#        Busqueda_Productos/sin_restricciones.cpp
#        Busqueda_Productos/main.cpp
#        Busqueda_Productos/crear_binario.cpp
#        Funcion_Encriptacion/main.cpp
#        Funcion_Encriptacion/encriptacion_con_restricciones.h
#        Funcion_Encriptacion/encriptacion_con_restricciones.cpp
#        Funcion_Encriptacion/encriptacion_sin_restricciones.h
#        Funcion_Encriptacion/encriptacion_sin_restricciones.cpp
        Lectura_estructuras/lectura_archivos.h
        Lectura_estructuras/crear_binario.cpp
        Lectura_estructuras/procesar_archivo.cpp
        Lectura_estructuras/main.cpp)
